fixed math display cropping with overflow-x

--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -987,6 +987,11 @@ pre.numberLines > code > span {
     overflow: auto hidden;
 }
 
+.katex-display .katex {
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+
 /* wide elements */
 
 .wide {
